[bugfix] Spacing Bug Mobile View @Home Page

--- a/src/pages/Home/sections/About/About.module.scss
+++ b/src/pages/Home/sections/About/About.module.scss
@@ -73,6 +73,7 @@
   }
 
   .open_source {
+    text-align: center;
     font-weight: bold;
     color: colors.$steel-blue;
     font-size: 1.5rem;
